# Garrotxeta

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: AlternateSet.hh.1297DC264097E266.idx  AlternateSubst.hh.33A952866A9C3111.idx  AlternateSubstFormat1.hh.24BB963A78DBB5E3.idx  Anchor.hh.F9E91EF9C1A25C3E.idx  AnchorFormat1.hh.4AC680B9F90EA4D4.idx  AnchorFormat2.hh.BBDFF7D7621696CB.idx  AnchorFormat3.hh.EB08A178CCF633FE.idx  AnchorMatrix.hh.DAB3AD9EBA36A2D5.idx  BidiChain.c.5CDDE7294B4EB03C.idx  BidiChain.h.D0ADD7F5BBA56EA0.idx  BidiTypeLookup.c.C13BDB21E89CE086.idx  BidiTypeLookup.h.0756FDED37B3F1B3.idx  BracketQueue.c.1D7BEDB716F2F7EB.idx  BracketQueue.h.E596D939277820CF.idx  BracketType.h.23A60F2F304C0E9F.idx  CBDT.hh.36327992AC9FFCF1.idx  COLR.hh.B6B6C2429598BF82.idx  CPAL.hh.242938ED4FF8A50B.idx  ChainContextPos.hh.509A363E47A41521.idx  ChainContextSubst.hh.E9205BF7B381B0F2.idx  Common.hh.8B61BF0BBCA2AF1B.idx  Common.hh.F9B50666B1E95FEE.idx  CompositeGlyph.hh.2A390F3D8AB297C7.idx  ContextPos.hh.DFD174C27323479D.idx  ContextSubst.hh.E4F2725C4E6B1D93.idx  Coverage.hh.02657B70F6EA7CCE.idx  CoverageFormat1.hh.403014E845806C78.idx  CoverageFormat2.hh.423A3D6E90FDB87C.idx  CursivePos.hh.14B1EA8A1A46BEE4.idx  CursivePosFormat1.hh.51997BE5DD40C332.idx  ExtensionPos.hh.56010F15B385B2AF.idx  ExtensionSubst.hh.30066B9477E67497.idx  GDEF.hh.3B6083BF09787980.idx  GPOS.hh.0DA0CB785B451C2E.idx  GSUB.hh.A6DE7CB399A9B84C.idx  GeneralCategoryLookup.c.3F80EF54F45A129F.idx  GeneralCategoryLookup.h.E85B95F1918619D2.idx  Glyph.hh.D20D3A4BCF587C41.idx  GlyphHeader.hh.71E070BA43B3442C.idx  IsolatingRun.c.0475715324E9DE1B.idx  (+1801 more)
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
